--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
   "dependencies": {
     "gatsby": "^4.24.4",
     "gatsby-plugin-image": "^2.24.0",
-    "gatsby-plugin-postcss": "^5.24.0",
     "gatsby-plugin-sharp": "^4.24.0",
     "gatsby-plugin-sitemap": "^5.24.0",
     "gatsby-source-filesystem": "^4.24.0",
     "gatsby-transformer-sharp": "^4.24.0",
-    "postcss": "^8.4.17",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
@@ -30,6 +28,10 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.12",
+    "gatsby-plugin-postcss": "^5.24.0",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3"
   }
 }
